samples/_failures_safe/1761489705_e4d8b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d828b38b.c: In function ‘print_token’:
./samples/SAFE/__tmp_d828b38b.c:173:12: error: expected expression at end of input
  173 |            token.line,
      |            ^~~~~
./samples/SAFE/__tmp_d828b38b.c:173:12: error: expected declaration or statement at end of input
